--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -209,7 +209,7 @@
   <div class="confirm-footer" data-i18n="footer.text">© Proximus.com — All rights reserved. Empowering your productivity.</div>
 </section>
 
-    <div class="env-bar"><span class="env-dot"></span><span id="env-status">UAT Environment</span></div>
+    <div id="env-bar-container" class="env-bar"><span class="env-dot"></span><span id="env-status">UAT Environment</span></div>
   </div>
 
   <!-- Settings overlay (gear) -->
