--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="taskpane.css" />
 </head>
 <body class="ms-Fabric" dir="ltr">
-  <div id="add-in-container" class="px-card green-gradient">
+  <div id="add-in-container" class="px-card">
     <div class="header">
       <div class="brand">
         <!-- <div class="title ms-Label" data-i18n="app.title">OA Meeting Room Assistant</div> -->
@@ -209,7 +209,7 @@
   <div class="confirm-footer" data-i18n="footer.text">© Proximus.com — All rights reserved. Empowering your productivity.</div>
 </section>
 
-    <div id="env-bar-container" class="env-bar"><span class="env-dot"></span><span id="env-status">UAT Environment </span></div>
+    <div id="env-bar-container" class="env-bar green-gradient"><span class="env-dot"></span><span id="env-status">UAT Environment </span></div>
   </div>
 
   <!-- Settings overlay (gear) -->
