--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -298,7 +298,7 @@
     </div>
   </div>
 
-  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
-  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
+  <script src="https://www-uat.proximus.be/.resources/cdn/webcomponents/outlook-plugin/scripts/config.js"></script>
+  <script src="https://www-uat.proximus.be/.resources/cdn/webcomponents/outlook-plugin/scripts/taskpaneSSO.js"></script>
 </body>
 </html>
