--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OA Meeting Assistant</title>
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-  <link rel="stylesheet" href="taskpane.css" />
+  <link rel="stylesheet" href="https://www-uat.proximus.be/.resources/cdn/webcomponents/outlook-plugin/css/taskpane.css" />
 </head>
 <body class="ms-Fabric" dir="ltr">
   <div id="add-in-container" class="px-card">
